k8s/archie/archie-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: archie-web-db
  namespace: archie
spec:
  replicas: 1
  #minReadySeconds: 60
  selector:
    matchLabels:
      app: archie-db
  template:
    metadata:
      labels:
        app: archie-db 
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - archie
      containers:
        - name: archie-db 
          image: mysql:9.2
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-vol
              mountPath: /var/lib/mysql
      volumes:
        - name: db-vol
          persistentVolumeClaim:
            claimName: archie-db-pvc
          #emptyDir:
          #  sizeLimit: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: svr-db
  namespace: archie 
spec:
  selector:
    app: archie-db
  clusterIP: None
  ports:
  - protocol: TCP
    port: 3306
