k8s/archie/archie-svr.yaml
# I am keeping the main server and web app components in their
# own deployment apart from the database, since the DB will need to 
# be scaled differently. These services, by themselves, are 
# stateless; any statefulness they present with is because of the 
# database exclusively.

#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: archie-db-pvc
#  namespace: archie
#spec:
#  storageClassName: longhorn
#  size:

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: archie-main-svr 
  namespace: archie
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-svr-stateless
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web-svr-stateless
    spec:
      dnsPolicy: ClusterFirst
      containers:
      # main server
      - name: archie-svr
        image: lmr97/archie-svr:latest
        imagePullPolicy: Always
        securityContext:
          runAsUser: 0
          runAsGroup: 0
        command: [ "/home/server/custom-backend/target/release/archie-server", "--no-tls"]
        ports:
          - containerPort: 4949

      # Letterboxd web app
      - name: lb-app
        image: lmr97/lb-web-app:latest
        imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: archie-svr
  namespace: archie 
spec:
  selector:
    app: web-svr-stateless 
  ports:
  - protocol: TCP
    port: 4949
    targetPort: 4949
